# Mush2D-Engine

./: CMakeLists.txt  README.md
assets/atlases/: characters.json  enemies.json  environment.json
shaders/: triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv
src/: Components.hpp  EngineApp.cpp  EngineApp.hpp  GameObject.hpp  PlayerStateSystem.cpp  PlayerStateSystem.hpp  Renderer2D.cpp  Renderer2D.hpp  Scene2D.hpp  main.cpp
src/app/: EngineApp.cpp  EngineApp.hpp
src/engine/assets/: AtlasLoader.cpp  AtlasLoader.hpp  AtlasTypes.hpp  TextureAtlas.cpp  TextureAtlas.hpp
src/engine/graphics/: AnimationCatalog.hpp  Camera2D.hpp  Renderer2D.cpp  Renderer2D.hpp  SpriteCatalog.hpp
src/engine/platform/: InputState.hpp
src/engine/scenes/: ISceneDefinition.hpp  SceneRegistry.cpp  SceneRegistry.hpp
src/engine/world/: Collision.cpp  Collision.hpp  GameObject.hpp  ObjectData.hpp  Scene2D.hpp
src/game/assets/: GameAnimationId.hpp  GameAssets.cpp  GameAssets.hpp  GameAtlasId.hpp  GameSpriteId.hpp
src/game/objects/: CheckpointObject.hpp  PlayerObject.hpp  SlimeEnemy.hpp  TeleportObject.hpp  WallObject.hpp
src/game/scenes/: SandboxScene.cpp  SandboxScene.hpp  TestScene.cpp  TestScene.hpp
src/game/spawners/: Spawn.cpp  Spawn.hpp
src/gameplay/: CheckpointObject.hpp  ISceneDefinition.hpp  PlayerObject.hpp  SandboxScene.cpp  SandboxScene.hpp  SceneId.hpp  SceneRegistry.cpp  SlimeEnemy.hpp  Spawn.hpp  TeleportObject.hpp  TestScene.cpp  TestScene.hpp  WallObject.hpp
src/graphics/: Camera2D.cpp
src/platform/: GlfwInput.cpp  GlfwInput.hpp
src/world/: Scene2D.hpp
